# casync-dashboard-backend

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  tasks.org
migrations/2018-11-17-180152_create_chunks/: down.sql  up.sql
migrations/2018-11-19-170725_create_chunks/: down.sql  up.sql
src/: json.rs  main.rs  schema.rs
src/db/: mod.rs  models.rs  schema.rs
src/ds/: mod.rs
src/params/: mod.rs
