[package]
name = "casync-dashboard"
version = "0.1.0"
authors = ["Krishna Kumar <krishnak@thoughtworks.com>"]

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
rocket = "0.4.0-rc.1"
rocket_contrib = "0.4.0-rc.1"
diesel = { version = "1.3.3", features = ["postgres","chrono"] }
dotenv = "0.9.0"
chrono = "0.4.0"
